--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,8 @@ ul.header li a {
 }
 
 button:hover,
-ul li:hover a {
+ul li:hover a,
+footer:hover {
   background-color: lightslategray; 
 }
 
@@ -127,4 +128,52 @@ ul li:hover a {
 .imageboard-img {
   max-width: 640px;
   max-height: 360px;
+}
+
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  text-align: center;
+}
+
+a {
+  text-decoration: none; 
+  color: inherit;
+}
+
+.link
+{
+   color: inherit;
+   text-decoration: none; 
+   background-color: none;
+}
+
+.link:hover {
+  text-decoration: none;
+}
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+  font-style: italic;
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  display: inline;
 }
